Scully generate blog

--- a/blog/2022-03-16-blog.md
+++ b/blog/2022-03-16-blog.md
@@ -1,7 +1,9 @@
 ---
 title: 2022-03-16-blog
-description: blog description
+description: 'blog description'
 published: false
+slugs:
+    - ___UNPUBLISHED___l0tmerof_sleYv5UVjxGNt9raQBGyXoDBIgvzTMi6
 ---
 
 # 2022-03-16-blog
